Fix squished checkboxes at certain breakpoints

--- a/assets/src/css/_components.field.scss
+++ b/assets/src/css/_components.field.scss
@@ -109,7 +109,7 @@
 			flex: 0 0 25px;
 			margin: 0 $wpbr-space-half 0 0;
 
-			@media ( min-width: 961px ) {
+			@media ( min-width: 783px ) {
 				flex: 0 0 16px;
 			}
 		}
@@ -117,7 +117,7 @@
 		label {
 			margin-top: 3px;
 
-			@media ( min-width: 961px ) {
+			@media ( min-width: 783px ) {
 				margin-top: -1px;
 			}
 		}
